; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_bread.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_bread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@idx_crc64_complement = common dso_local global i32 0, align 4
@bytes_read = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bread(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i8* @readin(i64 %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i8*, i8** %3, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @memcpy(i8* %12, i8* %13, i64 %14)
  %16 = load i8*, i8** %3, align 8
  %17 = load i64, i64* %4, align 8
  %18 = load i32, i32* @idx_crc64_complement, align 4
  %19 = call i32 @crc64_partial(i8* %16, i64 %17, i32 %18)
  store i32 %19, i32* @idx_crc64_complement, align 4
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @readadv(i64 %20)
  %22 = load i64, i64* %4, align 8
  %23 = load i32, i32* @bytes_read, align 4
  %24 = sext i32 %23 to i64
  %25 = add i64 %24, %22
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* @bytes_read, align 4
  ret void
}

declare dso_local i8* @readin(i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @crc64_partial(i8*, i64, i32) #1

declare dso_local i32 @readadv(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
